[tool.poetry]
name = "botdan"
version = "0.0.1"
description = "This bot makes your life easier than you can do yourself"
authors = ["Sergey Serov, Bohdan Sikan, Olga Tsyban, Maria Khorunzha"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
